Fixed margins on resolutions that wrap.
Changed it so that the images are 3px all around.

--- a/main.css
+++ b/main.css
@@ -23,15 +23,14 @@ section.footer {
 
 ul {
     list-style-type:none;
-    margin: 20px;
+    margin: 17px 20px;
     padding:0px;
 }
 
 li {
     vertical-align:middle;
     display: inline-block;
-    margin-left: 3px;
-    margin-right: 3px;
+    margin: 3px;
 }
 
 div.roundimg {
